more planning, made html header and deleted checks

--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="dist/styles.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>My Cook Book</h1>
+        <ul>
+            <a href="#"><li>Home</li></a>
+            <a href="#"><li>New Recipe</li></a>
+            <a href="#"><li>All recipes</li></a>
+            <a href="#"><li>Stared</li></a>
+            <a href="#"><li>Shoping cart</li></a>
+        </ul>
+    </header>
 
     <script type="module" src="dist/app.js"></script>
 </body>
+
 </html>
