--- a/all_recipes.html
+++ b/all_recipes.html
@@ -13,13 +13,13 @@
         <h1 class="site-header__h1 --center-text">My Cook Book</h1>
         <ul class="site-header__links">
             <a href="index.html">
-                <li  class="site-header__links--item --chosen-page">Home</li>
+                <li  class="site-header__links--item">Home</li>
             </a>
             <a href="new_recipe.html">
                 <li  class="site-header__links--item">New Recipe</li>
             </a>
             <a href="all_recipes.html">
-                <li  class="site-header__links--item">All recipes</li>
+                <li  class="site-header__links--item --chosen-page">All recipes</li>
             </a>
             <a href="stared_recipes.html">
                 <li  class="site-header__links--item">Stared</li>
