--- a/new_recipe.html
+++ b/new_recipe.html
@@ -13,10 +13,10 @@
         <h1 class="site-header__h1 --center-text">My Cook Book</h1>
         <ul class="site-header__links">
             <a href="index.html">
-                <li  class="site-header__links--item --chosen-page">Home</li>
+                <li  class="site-header__links--item">Home</li>
             </a>
             <a href="new_recipe.html">
-                <li  class="site-header__links--item">New Recipe</li>
+                <li  class="site-header__links--item --chosen-page">New Recipe</li>
             </a>
             <a href="all_recipes.html">
                 <li  class="site-header__links--item">All recipes</li>
