--- a/stared_recipes.html
+++ b/stared_recipes.html
@@ -13,7 +13,7 @@
         <h1 class="site-header__h1 --center-text">My Cook Book</h1>
         <ul class="site-header__links">
             <a href="index.html">
-                <li  class="site-header__links--item --chosen-page">Home</li>
+                <li  class="site-header__links--item">Home</li>
             </a>
             <a href="new_recipe.html">
                 <li  class="site-header__links--item">New Recipe</li>
@@ -22,7 +22,7 @@
                 <li  class="site-header__links--item">All recipes</li>
             </a>
             <a href="stared_recipes.html">
-                <li  class="site-header__links--item">Stared</li>
+                <li  class="site-header__links--item --chosen-page">Stared</li>
             </a>
             <a href="shopping_cart.html">
                 <li  class="site-header__links--item">Shoping cart</li>
