added base recipes

--- a/new_recipe.html
+++ b/new_recipe.html
@@ -76,6 +76,12 @@
                 </div>
             </form>
         </article>
+        <article class="--centered-flex">
+            <article id="messages" class="--card --display-none">
+                <h2>Recipe Added</h2>
+                <p id="new-recipe-info"></p>
+            </article>
+        </article>
     </main>
 
     <script type="module" src="dist/app.js"></script>
