added recipes display in all recipes

--- a/all_recipes.html
+++ b/all_recipes.html
@@ -13,22 +13,27 @@
         <h1 class="site-header__h1 --center-text">My Cook Book</h1>
         <ul class="site-header__links">
             <a href="index.html">
-                <li  class="site-header__links--item">Home</li>
+                <li class="site-header__links--item">Home</li>
             </a>
             <a href="new_recipe.html">
-                <li  class="site-header__links--item">New Recipe</li>
+                <li class="site-header__links--item">New Recipe</li>
             </a>
             <a href="all_recipes.html">
-                <li  class="site-header__links--item --chosen-page">All recipes</li>
+                <li class="site-header__links--item --chosen-page">All recipes</li>
             </a>
             <a href="stared_recipes.html">
-                <li  class="site-header__links--item">Stared</li>
+                <li class="site-header__links--item">Stared</li>
             </a>
             <a href="shopping_cart.html">
-                <li  class="site-header__links--item">Shoping cart</li>
+                <li class="site-header__links--item">Shoping cart</li>
             </a>
         </ul>
     </header>
+
+    <main id="all-recipes" class="--centered-flex">
+        <article class="--card">
+        </article>
+    </main>
 
     <script type="module" src="dist/app.js"></script>
 </body>
