recipe added pop up

--- a/new_recipe.html
+++ b/new_recipe.html
@@ -76,8 +76,8 @@
                 </div>
             </form>
         </article>
-        <article class="--centered-flex">
-            <article id="messages" class="--card --display-none">
+        <article class="--centered-flex ">
+            <article id="messages" class="--card --pop-up --center-text --display-none">
                 <h2>Recipe Added</h2>
                 <p id="new-recipe-info"></p>
             </article>
