added home feature with updates

--- a/index.html
+++ b/index.html
@@ -13,22 +13,29 @@
         <h1 class="site-header__h1 --center-text">My Cook Book</h1>
         <ul class="site-header__links">
             <a href="index.html">
-                <li  class="site-header__links--item --chosen-page">Home</li>
+                <li class="site-header__links--item --chosen-page">Home</li>
             </a>
             <a href="new_recipe.html">
-                <li  class="site-header__links--item">New Recipe</li>
+                <li class="site-header__links--item">New Recipe</li>
             </a>
             <a href="all_recipes.html">
-                <li  class="site-header__links--item">All recipes</li>
+                <li class="site-header__links--item">All recipes</li>
             </a>
             <a href="stared_recipes.html">
-                <li  class="site-header__links--item">Stared</li>
+                <li class="site-header__links--item">Stared</li>
             </a>
             <a href="shopping_cart.html">
-                <li  class="site-header__links--item">Shoping cart</li>
+                <li class="site-header__links--item">Shoping cart</li>
             </a>
         </ul>
     </header>
+    <main class="home-grid --center-text">
+        <article id="app-info" class="home-grid__gutter">Welcome user</article>
+        <article id="all-recipes-count" class="home-grid__gutter">all-recipes-count</article>
+        <article id="stared-recipes-count" class="home-grid__gutter">stared-recipes-count</article>
+        <article id="my-recipes-count" class="home-grid__gutter">my-recipes-count</article>
+        <article id="shopping-cart-count" class="home-grid__gutter">shopping-cart-count</article>
+    </main>
 
     <script type="module" src="dist/app.js"></script>
 </body>
