displayRecipes(container, recipestodisplay)

--- a/stared_recipes.html
+++ b/stared_recipes.html
@@ -30,7 +30,12 @@
         </ul>
     </header>
 
-    <script type="module" src="dist/app.js"></script>
+    <main id="stared-recipes" class="--centered-flex">
+        <article class="--card">
+        </article> 
+    </main>
+
+   <script type="module" src="dist/app.js"></script>
 </body>
 
 </html>
