added some logs to try and fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="all_recipes.html">
                 <li class="site-header__links--item">All recipes</li>
             </a>
-            <a href="stared_recipes.html">
+            <a id="stared-recipes-button" href="stared_recipes.html">
                 <li class="site-header__links--item">Stared</li>
             </a>
             <a href="shopping_cart.html">
