better grid layout for all recipes

--- a/all_recipes.html
+++ b/all_recipes.html
@@ -30,8 +30,8 @@
         </ul>
     </header>
 
-    <main id="all-recipes" class="--centered-flex">
-        <article class="--card">
+    <main id="all-recipes" class="all-recipes">
+        <article class="all-recipes__card">
         </article>
     </main>
 
